# qmkl

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  qmkl.pc.in
cmake/: FindCUnit.cmake  c_dep_on_qhex_from_py.cmake  qasm2m4_dep_on_c.cmake  qbin_dep_on_c.cmake
src/: CMakeLists.txt  error.c  launch_qpu_code.c  mailbox.c  main.c  map.c  memory.c
src/blas/: CMakeLists.txt  copy.c  gemm.c  omatcopy.c  scopy.qasm2m4  sgemm.py  sgemm.qasm2m4  sgemm.qbin  sgemm_16x16.qbin  sgemm_16x64.qbin  sgemm_1thread.py  sgemm_RNN.py  sgemm_RNN.qbin  sgemm_RNT.py  sgemm_RNT.qbin  sgemm_RTN.py  sgemm_RTN.qbin  sgemm_RTT.py  sgemm_RTT.qbin  somatcopy.qasm2m4
src/include/: mkl.h  qmkl.h
src/include/local/: called.h  common.h  error.h
src/include/qmkl/: blas.h  error.h  launch_qpu_code.h  mailbox.h  map.h  memory.h  raspberrypi-firmware.h  types.h  vm.h
src/vm/: CMakeLists.txt  abs.c  sAbs.qasm2m4
test/: CMakeLists.txt  config.h.in  init_finalize.c  malloc.c  memory_bench.c  scopy.c  sgemm.c  sgemm_spec.c  somatcopy.c  vcsm.c  vsAbs.c
